RESOLVED FIXED80864
New PageCache histogram which counts failures ignoring Settings.
https://bugs.webkit.org/show_bug.cgi?id=80864
Summary New PageCache histogram which counts failures ignoring Settings.
Gavin Peters
Reported 2012-03-12 12:02:54 PDT
New PageCache histogram which counts failures ignoring Settings.
Attachments
Patch (1.82 KB, patch)
2012-03-12 12:04 PDT, Gavin Peters
no flags
Gavin Peters
Comment 1 2012-03-12 12:04:38 PDT
Gavin Peters
Comment 2 2012-03-12 12:07:22 PDT
Chrome has a command line switch to turn on the page cache. Currently it doesn't work, but it can cause the PageCache reasons for failure count to read lower than it should. Add a new histogram to report the corrected value.
Gavin Peters
Comment 3 2012-03-12 12:08:13 PDT
beidson, Two questions: 1. Do you want to review histogram changes? 2. WDYT?
Brady Eidson
Comment 4 2012-03-12 12:31:02 PDT
(In reply to comment #3) > beidson, > > Two questions: > > 1. Do you want to review histogram changes? > Sure > 2. WDYT? Will look after lunch.
WebKit Review Bot
Comment 5 2012-03-13 08:29:11 PDT
Comment on attachment 131375 [details] Patch Clearing flags on attachment: 131375 Committed r110567: <http://trac.webkit.org/changeset/110567>
WebKit Review Bot
Comment 6 2012-03-13 08:29:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.