New PageCache histogram which counts failures ignoring Settings. https://bugs.webkit.org/show_bug.cgi?id=80864

Reviewed by Brady Eidson.

Chrome has a command line switch to turn on the page cache.
Currently it doesn't work, but it can cause the PageCache reasons
for failure count to read lower than it should.  Add a new
histogram to report the corrected value.

* history/PageCache.cpp:
(WebCore::logCanCachePageDecision):


Canonical link: https://commits.webkit.org/98144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110567 268f45cc-cd09-0410-ab3c-d52691b4dbfc